# submission-nav

./: .env.example  .gitignore  .skillignore  CHANGELOG.md  README.md  SKILL.md
.claude-plugin/: plugin.json
.github/workflows/: tests.yml
api_rules/: elsevier.md
docs/plans/: 2026-04-21-submission-navigator.md
scripts/: build_oa_eval_manifest.py  eval_public_crossfield.py  eval_submission_strategist.py  pyproject.toml  setup.ps1  setup.sh
scripts/sn_lib/: cache.py  citation_profile.py  cli.py  concepts.py  config.py  contribution.py  domain_gate.py  eval_quality.py  figures.py  ocr.py  parse.py  profile.py  publisher_risk.py  ranking.py  revision.py  rules.py  rules_cache.py  runs.py  specialty.py  suitability.py  venues.py
scripts/tests/: conftest.py  test_cache.py  test_citation_profile.py  test_cli.py  test_cli_dispatch.py  test_concepts.py  test_config.py  test_contribution.py  test_domain_gate.py  test_e2e_smoke.py  test_eval_public_crossfield.py  test_eval_quality.py  test_eval_submission_strategist.py  test_figures.py  test_ocr.py  test_parse.py  test_publisher_risk.py  test_ranking.py  test_revision.py  test_rules.py  test_runs.py  test_specialty.py  test_venues.py
skills/format-checker/: SKILL.md
skills/journal-rules/: SKILL.md
skills/mock-revision/: SKILL.md
skills/pre-submission-revision/: SKILL.md
skills/response-letter-drafter/: SKILL.md
skills/review-revision-strategist/: SKILL.md
skills/sn-config/: SKILL.md
skills/submission-strategist/: SKILL.md
